[package]
name = "kurosabi"
version = "0.5.4"
edition = "2024"
authors = ["371tti"]
description = "A lightweight asynchronous HTTP server framework built on Tokio."
license = "MIT"
repository = "https://github.com/371tti/kurosabi"
readme = "README.md"

[dependencies]
futures-core = { version = "0.3", default-features = false }
futures-io   = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
futures-timer = { version = "3", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }